--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>UserManager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <build>
         <plugins>
             <plugin>
@@ -20,5 +21,22 @@
             </plugin>
         </plugins>
     </build>
+
+<properties>
+        <lombok.version>1.16.18</lombok.version>
+        <customJvmArgs>-javaagent:C:\Users\tix32\.m2\repository\org\projectlombok\lombok\1.16.18\lombok.jar -Xmx3096M
+        </customJvmArgs>
+    </properties>
+
+    <!--<dependencies>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.projectlombok</groupId>-->
+            <!--<artifactId>lombok</artifactId>-->
+            <!--<version>${lombok.version}</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+
+    <!--</dependencies>-->
 
 </project>
