--- a/pom.xml
+++ b/pom.xml
@@ -28,15 +28,22 @@
         </customJvmArgs>
     </properties>
 
-    <!--<dependencies>-->
+    <dependencies>
 
-        <!--<dependency>-->
-            <!--<groupId>org.projectlombok</groupId>-->
-            <!--<artifactId>lombok</artifactId>-->
-            <!--<version>${lombok.version}</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
-    <!--</dependencies>-->
+        <dependency>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt-user</artifactId>
+        <version>2.8.1</version>
+        <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
 
 </project>
