--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>UserManager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <build>
         <plugins>
             <plugin>
@@ -22,18 +21,12 @@
         </plugins>
     </build>
 
-<properties>
-        <lombok.version>1.16.18</lombok.version>
-        <customJvmArgs>-javaagent:C:\Users\tix32\.m2\repository\org\projectlombok\lombok\1.16.18\lombok.jar -Xmx3096M
-        </customJvmArgs>
-    </properties>
-
     <dependencies>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
+            <version>1.16.18</version>
             <scope>provided</scope>
         </dependency>
 
