--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <scope>provided</scope>
         </dependency>
 
+      <dependency>
+        <groupId>org.realityforge.gwt.websockets</groupId>
+        <artifactId>gwt-websockets</artifactId>
+        <version>1.1.2</version>
+      </dependency>
+
     </dependencies>
 
 </project>
