--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,17 @@
             <scope>provided</scope>
         </dependency>
 
-      <dependency>
-        <groupId>org.realityforge.gwt.websockets</groupId>
-        <artifactId>gwt-websockets</artifactId>
-        <version>1.1.2</version>
-      </dependency>
+        <dependency>
+            <groupId>org.realityforge.gwt.websockets</groupId>
+            <artifactId>gwt-websockets</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
 
     </dependencies>
 
